--- a/blocks/header.css
+++ b/blocks/header.css
@@ -21,7 +21,7 @@
   line-height: 36px;
   text-align: center;
   max-width: 720px;
-  font-weight: 300; /*no figma ta falando 400 mas achei o 300 mais parecido */
+  font-weight: 400; 
   margin: 0;
 }
 
