--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,6 @@
 @import url(../blocks/conheca.css);
 @import url(../blocks/footer.css);
 @import url(../blocks/nav.css);
+@import url(../blocks/photo-grid.css);
+@import url(../blocks/places.css);
 
