--- a/blocks/conheca.css
+++ b/blocks/conheca.css
@@ -43,3 +43,83 @@
   margin: 32px 0 118px 0;
 }
 
+
+@media (max-width: 768px) {
+  .conheca {
+    width: 90%;
+  }
+
+  .conheca__title {
+    font-size: 45px;
+    line-height: 49px;
+  }
+
+  .conheca__quote {
+    margin: 50px 0 10px 0;
+  }
+
+  .conheca__text {
+    margin: 32px 0 88px 0;
+  }
+}
+
+
+
+@media (max-width: 600px) {
+  .conheca__title {
+    font-size: 40px;
+    line-height: 45px;
+  }
+
+  .conheca__quote {
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .conheca__quote-author {
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .conheca__text {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+
+
+@media (max-width: 450px) {
+  .conheca__title {
+    font-size: 35px;
+    line-height: 40px;
+  }
+
+  .conheca__quote-author {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
+
+
+@media (max-width: 320px) {
+  .conheca {
+    width: 90%;
+  }
+
+  .conheca__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+
+  .conheca__quote {
+    margin: 40px 0 10px 0;
+  }
+
+  .conheca__text {
+    margin: 32px 0 64px 0;
+    font-size: 14px;
+  }
+}
+
