--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,8 +1,9 @@
 .page {
-  width: 100%;
-  margin: auto;
+  max-width: 1280px;
+  box-sizing: border-box;
+  margin: 0 auto;
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   background-color: #2A2C2F;
-  color: #FFFFFF;
+  color: white;
   }
