--- a/pages/index.css
+++ b/pages/index.css
@@ -7,4 +7,5 @@
 @import url(../blocks/nav.css);
 @import url(../blocks/photo-grid.css);
 @import url(../blocks/places.css);
+@import url(../blocks/body.css);
 
