--- a/pages/index.css
+++ b/pages/index.css
@@ -2,10 +2,10 @@
 @import url(../vendor/fonts.css);
 @import url(../blocks/page.css);
 @import url(../blocks/header.css);
-@import url(../blocks/conheca.css);
+@import url(../blocks/introduction.css);
 @import url(../blocks/footer.css);
 @import url(../blocks/nav.css);
 @import url(../blocks/photo-grid.css);
 @import url(../blocks/places.css);
 @import url(../blocks/body.css);
-
+@import url(../blocks/body.css);
